# ai-service

.github/workflows/: cd-frontend.yaml  cd.yaml
ai-service/: .env  Dockerfile  README.md  pyproject.toml
ai-service/src/ai_service/: __main__.py  api.py  server.py
ai-service/src/ai_service/api/: api.py
ai-service/src/ai_service/api/endpoints/: ai_ressource.py
ai-service/src/ai_service/core/: config.py
