[tool.poetry]
name = "ai-api"
version = "0.1.0"
description = ""
authors = ["markusremplbauer <markus.remplbauer@gmx.at>"]
readme = "README.md"
packages = [{include = "ai_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
transformers = {extras = ["torch"], version = "^4.27.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
